--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div class="wrapper">
-        
-        <div id="parent">
-           <div id="child"></div>
+        <div id="tablo1"></div>
+        <div id="tablo2">0</div>
+        <div class="btn">
+           <button id="start">Start</button>
+           <button id="reset">Reset</button>
         </div>
-        
-        <button id="right">Подвинуть на право</button>
     </div>
-    <!-- <button>Stop</button> -->
 </body>
 <script src="app.js"></script>
 </html>
